--- a/estilos/style.css
+++ b/estilos/style.css
@@ -122,7 +122,7 @@ text-dark{color:#1a1a1a}
     h1{font-size: 40px; line-height: normal;}
 }
 
-
+/*
 @media (min-width: 576px) and (max-width: 767.98px) { . .. }
 
 
