disposicion de elementos en blog arreglada

--- a/estilos/styleBlog.css
+++ b/estilos/styleBlog.css
@@ -112,6 +112,7 @@ text-dark{color:#1a1a1a}
 .portfolio-container img{
     max-width: 100%;
     height: auto;
+    border-radius: 2px;
 }
 
 .article-text{
@@ -188,5 +189,5 @@ ul {list-style:none;}
 
 
 @media (min-width: 1200px) {
-    
+    .portfolio-container{padding: 100px;}
 }
