--- a/estilos/styleServicios.css
+++ b/estilos/styleServicios.css
@@ -200,6 +200,59 @@ text-dark {
 }
 
 
+/* Estilo de la sección del carrusel */
+.carousel{
+    min-height: 240px;
+    padding: 40px;
+    border-radius: 2px;
+    text-align: center;
+}
+
+.carousel p{
+    font-size: 26px;
+    font-weight: 400;
+    color: #1a1a1a;
+}
+
+.carousel-indicators li{
+    background-color:#1a1a1a ;
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    margin: 0 8px;
+}
+
+.carousel-container{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.carousel-control-next, carousel-control-prev{
+    color: #ffffff;
+    opacity: 1;
+    width: 5%;
+}
+
+.control-button{
+    background-color: #1a1a1a;
+    opacity: 1;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border: 1px solid #1a1a1a;
+    border-radius: 50px;
+    font-size: 20px;
+}
+
+.rating ion-icon{
+    color: #ffb944;
+    font-size: 26px;
+}
+
+
+
+
+/* Estilo de la sección de miembros*/
 .member-container {
     position: relative;
     margin: 10px 0;
