--- a/estilos/styleServicios.css
+++ b/estilos/styleServicios.css
@@ -28,7 +28,7 @@ section {
 
 p {
     font-size: 18px;
-    color: #999999;
+    color: #575757;
     line-height: 1.8;
     margin-bottom: 0;
 }
@@ -229,6 +229,7 @@ text-dark {
     margin: 0 auto;
 }
 
+
 .carousel-control-next, carousel-control-prev{
     color: #ffffff;
     opacity: 1;
@@ -249,6 +250,16 @@ text-dark {
 .rating ion-icon{
     color: #ffb944;
     font-size: 26px;
+}
+
+#chevron-left{
+    padding-top: 3px;
+    padding-right: 2px;
+}
+
+#chevron-right{
+    padding-top: 3px;
+    padding-left: 2px;
 }
 
 
@@ -315,12 +326,26 @@ text-dark {
     }
     .carousel-item p{
         font-size: 20px;
+        padding-bottom: 10px;
     }
+
+    .testimonial-user{
+        text-align: center;
+    }
+
     .plans{min-width: unset; padding: 40px;} /* ajustamos el tamaño de los div de planes de pago para hacerlo responsivo*/
 }
 
 
-@media (min-width: 576px) and (max-width: 767.98px) {}
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .carousel-item p{
+        font-size: 20px;
+        padding-bottom: 10px;
+    }
+    .testimonial-user{
+        text-align: center;
+    }
+}
 
 
 @media (min-width: 768px) and (max-width: 991.98px) {
